# pixor

./: .gitignore  CMakeLists.txt  README.md
res/layout/: menubar.xml  toolbar.xml
src/: CMakeLists.txt  application.cpp  application.h  canny.cpp  canny.cu  canny.h  context.cpp  context.h  crc.cpp  crc.h  debug.h  image.h  image_area.cpp  image_area.h  main.cpp  main_window.cpp  main_window.h  matrix.cu  matrix.h  matrix.tpp  pattern.cpp  pattern.h  pixor.cpp  pixor.h  png.cpp  png.h  png_chunk.cpp  png_chunk.h
